test/good/sets/set08.px

s = {"abc"}
print s

s = {'x'}
print s
