test/bad/strings/string1.px

s = "abc"
s[0] = 'x'
